deployments/gollum/01-deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gollum
  namespace: services
  labels:
    app.kubernetes.io/name: gollum
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gollum
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gollum
    spec:
      containers:
        - name: gollum
          image: docker.rcomanne.nl/gollum
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 4567
          startupProbe:
            httpGet:
              port: web
              path: /
              scheme: HTTP
      imagePullSecrets:
        - name: private-registry
