deployments/gollum/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: gollum
  namespace: services
  labels:
    app.kubernetes.io/name: gollum
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app.kubernetes.io/name: gollum
