deployments/gollum/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gollum
  namespace: services
  labels:
    app.kubernetes.io/name: gollum
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cr
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  tls:
    - hosts:
        - wiki.rcomanne.nl
  rules:
    - host: wiki.rcomanne.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gollum
                port:
                  name: web
